[metadata]
name = fbtext
version = 1.0.0
author = Utkarsh Patel
author_email = imutkarshpatel@gmail.com
description = Scraping textual data from Facebook for NLP research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/utkarsh512/fbtext
project_urls =
    Bug Tracker = https://github.com/utkarsh512/fbtext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bs4
    selenium
    cssutils

